--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	</div>
 	<div class="crystals">
 		
-		<img src="http://www.clker.com/cliparts/e/0/9/b/13055580631924708721diamond-md.png" class=crystalPic id="one" alt="Blue Gem">
-		<img src="http://gem-sphalerite.com/images_web/properties/colors/0_green_gem_sphalerite.jpg" class=crystalPic id="two" alt="Green Gem">
+		<img src="https://www.clker.com/cliparts/e/0/9/b/13055580631924708721diamond-md.png" class=crystalPic id="one" alt="Blue Gem">
+		<img src="https://gem-sphalerite.com/images_web/properties/colors/0_green_gem_sphalerite.jpg" class=crystalPic id="two" alt="Green Gem">
 		<img src="https://4.imimg.com/data4/AX/II/MY-27343279/red-gemstone-250x250.jpg" class=crystalPic id= "three" alt="Red Gem">
 		<img src="https://png.pngtree.com/element_origin_min_pic/00/02/54/97568395ef9837c.jpg" class=crystalPic id= "four" alt="Yellow Gem">
 	</div>
